--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,7 +4,7 @@ import '../styles/blog.css'
 const { frontmatter } = Astro.props
 ---
 
-<Layout title={frontmatter.title}>
+<Layout title={frontmatter.title} description={frontmatter.description} type="article">
     <main>
         <h1>{frontmatter.title}</h1>
         <p class="date">{frontmatter.date}</p>
