--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to My Blog!">
+<Layout title="Welcome to My Blog!" description="Welcome! At Broken Coder, you will learn how to make your code overpowered." type="home">
 	<main>
 		<h1>Welcome to my blog!</h1>
 	</main>
