--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro'
 import Article from '../components/Article.astro'
 const posts = await Astro.glob('../pages/posts/*.mdx')
 ---
-<Layout title="Blog">
+<Layout title="Blog" description="Find all of the latest content that will help you acheive your coding dreams!" type="home">
     <div>
         {posts.slice(0, 3).map((post) => (
             <Article title={post.frontmatter.title} description={post.frontmatter.description} url={post.frontmatter.url} tags={post.frontmatter.tags.split(', ')}/>
