Image optimization for the photo of me on index and about pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="Welcome to My Blog!" description="Welcome! At Broken Coder, you will learn how to make your code overpowered." type="home">
 	<main>
 		<h1>Tyler Baker</h1>
-		<img src="/Profile Image.png" alt="Tyler Baker picture" />
+		<img src="/Profile Image.jpg" alt="Tyler Baker picture" />
 		<h2>Developer. Musician. Teacher.</h2>
 		<p>I love creating new things. Come work with me!</p>
 		<div class="my-links">
