--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,15 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Article from '../components/Article.astro'
-const posts = await Astro.glob('../pages/posts/*.mdx')
+let posts = await Astro.glob('../pages/posts/*.mdx')
 posts.sort((a, b) => Date.parse(b.frontmatter.date) - Date.parse(a.frontmatter.date));
+for (let post of posts) {
+    if (post.frontmatter.draft == true) {posts.remove(post)}
+}
 ---
 <Layout title="Blog" description="Find all of the latest content that will help you acheive your coding dreams!" type="home">
     <div class="blobs">
         {posts.slice(0, 3).map((post) => (
-            if (post.frontmatter.drafts == false) {
-                <Article title={post.frontmatter.title} description={post.frontmatter.description} url={post.frontmatter.url} tags={post.frontmatter.tags.split(', ')}/>
-            }
+            <Article title={post.frontmatter.title} description={post.frontmatter.description} url={post.frontmatter.url} tags={post.frontmatter.tags.split(', ')}/>
         ))}
     </div>
 </Layout>
