--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,9 @@ import '../styles/theme.css'
 export interface Props {
 	title: string;
 }
+import { inject } from '@vercel/analytics';
+
+inject();
 const { title, description, type } = Astro.props as Props
 
 
